fix time not showing and styling weather

--- a/src/Pages/Citypage/index.module.scss
+++ b/src/Pages/Citypage/index.module.scss
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 html,
 body {
   margin: 0;
@@ -14,7 +8,7 @@ body {
   background-color: rgba(187, 250, 250, 0.363);
   padding: 1rem;
   .paper {
-    height: calc(100vh - 40px - 2rem);
+    min-height: calc(100vh - 40px - 2rem);
     border-radius: 4px;
     background-color: white;
     display: flex;
@@ -26,6 +20,7 @@ body {
       flex-direction: column;
       align-items: center;
       padding: 1rem 0;
+      position: relative;
 
       .cityInfo {
         display: flex;
@@ -42,9 +37,19 @@ body {
       width: 70%;
       justify-content: space-around;
       text-align: center;
+      img {
+        margin-top: 1rem;
+      }
+      h3 {
+        margin: 0.5rem 0;
+      }
 
       .weatherInfo {
         max-width: 200px;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       .sightsInfo {
