--- a/src/components/Weather/index.module.scss
+++ b/src/components/Weather/index.module.scss
@@ -1,4 +1,44 @@
 .main {
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  .paper {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    h3 {
+      margin-top: 0.5rem;
+      text-align: center;
+    }
+    span {
+      display: flex;
+      align-items: center;
+    }
+    p {
+      margin: 0;
+    }
+    .forecast {
+      > div {
+        border: 1px solid black;
+        border-radius: 4px;
+      }
+
+      > div + div {
+        margin-top: 0.5rem;
+      }
+      span {
+        margin-left: 1rem;
+      }
+      h4 {
+        margin-top: 0.5rem;
+      }
+    }
+    .undefined {
+      text-align: center;
+    }
+  }
 }
